# jupyterlab-latex

./: .copier-answers.yml  .eslintignore  .gitignore  .jupyter_ystore.db  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  Untitled.ipynb  eslint.config.js  install.json  package-lock.json  package.json  pyproject.toml  sample.tex  sample.tex.orig  setup.py  setupbase.py  tsconfig.json  tslint.json  untitled.tex  webpack.config.js
.github/workflows/: build.yml  check-release.yml
binder/: apt.txt  environment.yml  postBuild  requirements.txt  start
binder_conda/: environment.yaml  environment.yml  jupyter_notebook_config.py  start
binder_pip/: jupyter_notebook_config.py  postBuild  start
docs/: advanced.md  changelog.md
images/: Untitled.ipynb
jupy_latex/: __init__.py
jupy_latex/api/: api.yaml
jupyter-config/jupyter_notebook_config.d/: jupyterlab_latex.json
jupyter-config/nb-config/: jupy_latex.json  jupyterlab_latex.json
jupyter-config/server-config/: jupy_latex.json  jupyterlab_latex.json
jupyterlab-latex/: __init__.py  build.py
jupyterlab_latex/: __init__.py  _version.py  build.py  config.py  synctex.py  util.py
jupyterlab_latex/api/: api.yaml
schema/: plugin.json
src/: error.ts  error.tsx  index.ts  index.ts.orig  latex.ts  pagenumber.tsx  pdf.ts  svg.d.ts
src/style/: icons.ts
style/: index.css
workflows/: build.yml  check-release.yml
