[build-system]
requires = [
    "jupyter_packaging~=0.10,<2", 
    "jupyterlab~=3.0"
]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = [
    "jupyterlab_latex/labextension/static/style.js"
]
ensured-targets = [
    "jupyterlab_latex/labextension/package.json",
    "jupyterlab_latex/labextension/static/style.js", 
]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = [
    "jlpm"
]

[tool.check-manifest]
ignore = [
    ".*",
    "jupyterlab_latex/labextension/**",
    "package-lock.json",
    "yarn.lock"
]
